<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_alc">AboutALC</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="track_android">Track: Android</string>
    <string name="email_solomon7373_yahoo_com">Email: solomon7373@yahoo.com</string>
    <string name="phone_number_2348036446102">Phone number: 2348036446102</string>
    <string name="slack_username_uchennao">Slack Username: @UchennaO</string>
    <string name="uchenna_okafor">Uchenna Okafor</string>
</resources>
